--- a/.travis.yml
+++ b/.travis.yml
@@ -3,26 +3,26 @@ services:
   - docker
 
 before_install:
-  - docker build -t talonstrikesoftware/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t redwolf2000/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true talonstrikesoftware/react-test npm test
+  - docker run -e CI=true redwolf2000/react-test npm test
 
 after_success:
-  - docker build -t talonstrikesoftware/multi-client ./client
-  - docker build -t talonstrikesoftware/multi-nginx ./nginx
-  - docker build -t talonstrikesoftware/multi-server ./server
-  - docker build -t talonstrikesoftware/multi-worker ./worker
+  - docker build -t redwolf2000/multi-client ./client
+  - docker build -t redwolf2000/multi-nginx ./nginx
+  - docker build -t redwolf2000/multi-server ./server
+  - docker build -t redwolf2000/multi-worker ./worker
 
   #Log in to the docker CLI
   # echo password to the stdin and then login to docker and tell it to get the password from stdin
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
   # Take those images and push them to docker hub
-  - docker push talonstrikesoftware/multi-client
-  - docker push talonstrikesoftware/multi-nginx
-  - docker push talonstrikesoftware/multi-server
-  - docker push talonstrikesoftware/multi-worker
+  - docker push redwolf2000/multi-client
+  - docker push redwolf2000/multi-nginx
+  - docker push redwolf2000/multi-server
+  - docker push redwolf2000/multi-worker
 
 #deploy:
 #  edge: true
